--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,18 +13,24 @@ body {
 	min-height: 100vh;
 	max-width: 1200px;
 	margin: 0 auto;
-	position: relative;
-	background-color: rgba(19, 71, 19, 0.5);
+	background-color: rgba(34, 37, 34, 0.801);
 	font-family: 'Montserrat', 'sans-serif';
 	color: #fff;
 }
-h1 {
-	position: absolute;
-	font-size: 50px;
-	width: 50%;
-	padding: 40px 20px;
-	left: 50%;
-	top: 10%;
+ul {
+	display: flex;
+	list-style: none;
+	background-color: rgb(34, 37, 34);
+}
+li {
+	margin: 20px 0 20px 0;
 	text-align: center;
-	transform: translate(-50%, -50%);
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	flex-basis: 20%;
+}
+a {
+	text-decoration: none;
+	color: white;
 }
