--- a/src/css/style.css
+++ b/src/css/style.css
@@ -34,3 +34,13 @@ a {
 	text-decoration: none;
 	color: white;
 }
+.myphoto {
+	width: 100%;
+	height: 600px;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	background-image: url(../images/beard-g3ebf5aa80_1280.jpg);
+	border: 20px solid rgb(0, 0, 0);
+	background-color: black;
+}
