--- a/src/css/style.css
+++ b/src/css/style.css
@@ -20,7 +20,7 @@ body {
 ul {
 	display: flex;
 	list-style: none;
-	background-color: rgb(34, 37, 34);
+	background-color: rgba(34, 37, 34, 0.726);
 }
 li {
 	margin: 20px 0 20px 0;
@@ -33,14 +33,37 @@ li {
 a {
 	text-decoration: none;
 	color: white;
+	padding: 20px 40px;
+	font-weight: bold;
 }
-.myphoto {
-	width: 100%;
-	height: 600px;
+.firstPage {
+	margin: 20px 20px;
+	background-image: url(../images/beard-g3ebf5aa80_1280.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
-	background-image: url(../images/beard-g3ebf5aa80_1280.jpg);
-	border: 20px solid rgb(0, 0, 0);
-	background-color: black;
+	/* max-width: 1100px; */
+}
+.myPhoto {
+	height: 600px;
+	background-color: rgba(0, 0, 0, 0.767);
+}
+.icon {
+	display: flex;
+}
+.icon a {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	margin: 0 100px;
+	flex-grow: 1;
+}
+.forFooter {
+	font-size: 50px;
+}
+
+.copyright p {
+	margin: 20px auto;
+	width: 100%;
+	text-align: center;
 }
