--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,6 +17,7 @@ body {
 	font-family: 'Montserrat', 'sans-serif';
 	color: #fff;
 }
+/* NAVIGATION */
 ul {
 	display: flex;
 	list-style: none;
@@ -33,37 +34,80 @@ li {
 a {
 	text-decoration: none;
 	color: white;
-	padding: 20px 40px;
+	margin: 20px 40px;
 	font-weight: bold;
+	padding: 10px;
+	transition: background-color 0.3s linear, color 0.3s linear;
 }
-.firstPage {
-	margin: 20px 20px;
-	background-image: url(../images/beard-g3ebf5aa80_1280.jpg);
+li a:hover {
+	border: 3px solid rgb(0, 0, 0);
+	background-color: #fff;
+	color: black;
+}
+
+/* HEADER */
+.Page {
+	margin: 20px 20px 0 20px;
+
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 	/* max-width: 1100px; */
 }
-.myPhoto {
-	height: 600px;
+.halfThone {
+	height: 460px;
 	background-color: rgba(0, 0, 0, 0.767);
+	position: relative;
 }
+.text {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 90%;
+	transform: translate(-50%, -50%);
+	letter-spacing: 3px;
+}
+.firstPhoto {
+	background-image: url(../images/beard-g3ebf5aa80_1280.jpg);
+}
+/* ASIDE */
 .icon {
 	display: flex;
 }
 .icon a {
+	margin: 20px;
 	display: flex;
+	height: 200px;
 	align-items: center;
 	justify-content: space-around;
-	margin: 0 100px;
 	flex-grow: 1;
+	background-color: rgba(34, 37, 34, 0.726);
 }
-.forFooter {
+.forAside {
 	font-size: 50px;
 }
-
-.copyright p {
-	margin: 20px auto;
-	width: 100%;
+.asideSection {
+	margin: 20px 0 0 0;
 	text-align: center;
+	font-size: 30px;
+}
+.icon a span {
+	font-size: 30px;
+	font-family: 'Roboto', sans-serif;
+	margin: 20px;
+}
+/* Footer */
+p {
+	text-align: center;
+	padding: 0 0 19px 0;
+}
+.contact {
+	background-color: rgba(34, 37, 34, 0.726);
+	padding: 20px 0 20px 0;
+	display: flex;
+	justify-content: space-around;
+}
+.forContact span {
+	padding: 0 20px;
+	font-family: 'Roboto', sans-serif;
 }
